--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html lang="en">
 	<head>
-		<title>Paull's Farm House</title>
+		<title>Farm House</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<link rel="stylesheet" href="assets/css/main.css">
@@ -147,7 +147,7 @@ Negotiation for use of Outbuildings, Barn, Fields, Workshops, Stables possible v
 									<a href="mailto:superior.uk@gmail.com">superior.uk@gmail.com</a>
 									<p></p>
 									<div class="image">
-										<img src="images/outside.png" alt="" style="width: 35rem;">
+										<img src="images/PaullsFarm.jpg" alt="" style="width: 35rem;">
 									</div>
 								</section>
 							</div>
