--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Servants_MainWindow.JPG" class="image"><img src="images/thumbs/Servants_Quarters_brightwindows.jpeg" alt=""></a>
-							<h2>SERVANT QUARTERS * Self-contained conversion possiblity using independant farmyard entrance configured with Old Dairy</h2>
+							<h2>RECEPTION 3 [SERVANT QUARTERS]</h2>
 								
-							<p>
-								</p>
+							<p> * Self-contained conversion possiblity using independant farmyard entrance configured with Old Dairy</p>
+								
 						</article>
 					</div>
 
