--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							<p></p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Servants_MainWindow.JPG" class="image"><img src="images/thumbs/Servants_MainWindowcrop.jpg" alt=""></a>
+							<a href="images/fulls/Servants_MainWindow.JPG" class="image"><img src="images/thumbs/Servants_Quarters_1copy.jpeg" alt=""></a>
 							<h2>RECEPTION 3 [SERVANT QUARTERS]</h2>
 								
 							<p> * Self-contained conversion possiblity using independant farmyard entrance configured with Old Dairy</p>
