--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<p>Small window at yard corner/OLD DAIRY party-wall [countryside view beyond car-park] </p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Reception2_mainwindow.JPG" class="image"><img src="images/thumbs/Reception2_mainwindow.JPG" alt="" /></a>
+							<a href="images/fulls/Reception2_mainwindow.JPG" class="image"><img src="images/thumbs/Reception2_THUMB.jpg" alt="" /></a>
 							<h2>RECEPTION 2</h2>
 							<p></p>
 						</article>
