--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_3.JPG" class="image"><img src="images/thumbs/Kitchen_3.JPG" alt=""></a>
 							<h2>BACK-STAIRS door at KITCHEN</h2>
-							<p>KITCHEN door through to main house</p>
+							<p>+ KITCHEN door through to main house</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Servants_Stairs.JPG" class="image"><img src="images/thumbs/ServantStairThumb2.jpeg" alt=""></a>
