--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
 						<article class="thumb">
 							<a href="images/fulls/Bedroom3_1.JPG" class="image"><img src="images/thumbs/Bedroom3_1.JPG" alt=""></a>
 							<h2>BEDROOM 3</h2>
-							<p> Old barn and field facing view [New builds - 1,3,5,5a Leire Lane - replaced the old barn] + Inside Corridor Window</p>
+							<p> Countryside view beyond car-park from main window + Inside Corridor Window</p>
 						</article>
 					
 						<article class="thumb">
 							<a href="images/fulls/Bedroom4_1.JPG" class="image"><img src="images/thumbs/Bedroom4_1.JPG" alt=""></a>
 							<h2>BEDROOM 4</h2>
-							<p>Street corner facing [Leire Lane] + Small window at yard corner/THE OLD DAIRY party-wall [countryside view beyond car-park] 
+							<p>Small window at corner to farmyard [THE OLD DAIRY party-wall]
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/BoxRoom.png" class="image"><img src="images/thumbs/BoxRoom.png" alt=""></a>
-							<h2>BEDROOM 5/BOX ROOM *Jack & Jill bathroom between BEDROOMs 1 and 4
+							<h2>BEDROOM 5 
 								  </h2>
-							<p>Church facing view [Leire Lane/Ashby Road]</p>
+							<p> Box Room/Office/Jack & Jill bathroom (between BEDROOMs 1 and 4) Church facing view </p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_1.JPG" class="image"><img src="images/thumbs/Kitchen_1.JPG" alt=""></a>
