--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/BoxRoom.png" class="image"><img src="images/thumbs/BoxRoom.png" alt=""></a>
-							<h2>BEDROOM 5 
-								  </h2>
+							<h2>BEDROOM 5 </h2>
 							<p> Box Room/Office/Jack & Jill bathroom (between BEDROOMs 1 and 4) Church facing view </p>
 						</article>
 						<article class="thumb">
