--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 						<article class="thumb">
 							<a href="images/fulls/Bedroom4_1.JPG" class="image"><img src="images/thumbs/Bedroom4_1.JPG" alt=""></a>
 							<h2>BEDROOM 4</h2>
-							<p>Small window at corner to farmyard [THE OLD DAIRY party-wall]
+							<p>Village corner outlook from main window + Small corner window at THE OLD DAIRY party-wall </p> 
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/BoxRoom.png" class="image"><img src="images/thumbs/BoxRoom.png" alt=""></a>
 							<h2>BEDROOM 5 </h2>
-							<p> Box Room/Office/Jack & Jill bathroom (between BEDROOMs 1 and 4) Church facing view </p>
+							<p> Box Room/Office/Jack & Jill bathroom (between BEDROOMs 1 and 4) </p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_1.JPG" class="image"><img src="images/thumbs/Kitchen_1.JPG" alt=""></a>
