--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<article class="thumb">
 							<a href="images/fulls/Bedroom1_1.JPG" class="image"><img src="images/thumbs/Bedroom1_1.JPG" alt=""></a>
 							<h2>BEDROOM 1</h2>
-							<p>Church facing view [Leire Lane/Ashby Road]</p>
+							<p>Church facing corner [Leire Lane/Ashby Road]</p>
 						</article>
 
 						<article class="thumb">
