--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 							<a href="images/fulls/Servants_MainWindow.JPG" class="image"><img src="images/thumbs/Servants_Quarters_1copy.jpeg" alt=""></a>
 							<h2>RECEPTION 3 [SERVANT QUARTERS]</h2>
 								
-							<p> * Self-contained conversion possiblity using independant farmyard entrance configured with Old Dairy</p>
+							<p> * Conversion possiblity to self-contained quarters using existing unused door. Independant or disabled entrance possible with yard refiguration </p>
 								
 						</article>
 					</div>
