--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Negotiation for use of Outbuildings, Barn, Fields, Workshops, Stables possible v
 									<a href="mailto:superior.uk@gmail.com">superior.uk@gmail.com</a>
 									<p></p>
 									<div class="image">
-										<img src="images/PaullsFarm.jpg" alt="" style="width: 35rem;">
+										<img src="images/PaullsFarm.jpg" alt="" style="width: 100%;">
 									</div>
 								</section>
 							</div>
