Adding exterior images

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 					</header>
 
 				<!-- Main -->
-					<div id="main">
+					<div id="main"><article class="thumb">
+							<a href="images/fulls/01_Garden.jpg" class="image"><img src="images/thumbs/01_Garden.jpg" alt=""></a>
+							<h2>Garden</h2>
+							<p></p>
+						</article>
 						<article class="thumb">
 							<a href="images/fulls/Bedroom1_1.JPG" class="image"><img src="images/thumbs/Bedroom1_1.JPG" alt=""></a>
 							<h2>BEDROOM 1</h2>
