--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 							<p></p>
 						</article>
 						<article class="thumb">
+							<a href="images/fulls/02_OuthousesJPG" class="image"><img src="images/thumbs/02_OuthousesJPG" alt=""></a>
+							<h2>Outhouse Main Block</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/Bedroom1_1.JPG" class="image"><img src="images/thumbs/Bedroom1_1.JPG" alt=""></a>
 							<h2>BEDROOM 1</h2>
 							<p>Church facing corner [Leire Lane/Ashby Road]</p>
