--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02_Outhouses.JPG" class="image"><img src="images/thumbs/02_Outhouses.JPG" alt=""></a>
-							<h2>Outhouse Main Block</h2>
+							<h2>Outhouses Main Block</h2>
 							<p></p>
 						</article>
 						<article class="thumb">
