--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
 							<p></p>
 						</article>
 						<article class="thumb">
+							<a href="images/fulls/03_Barn.jpg" class="image"><img src="images/thumbs/03_Barn.jpg" alt=""></a>
+							<h2>Barn</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/04_EndStable.JPG" class="image"><img src="images/thumbs/04_EndStable.JPG" alt=""></a>
+							<h2>End Stable at main outhouse block</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/Bedroom1_1.JPG" class="image"><img src="images/thumbs/Bedroom1_1.JPG" alt=""></a>
 							<h2>BEDROOM 1</h2>
 							<p>Church facing corner [Leire Lane/Ashby Road]</p>
