--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
 							<p></p>
 						</article>
 						<article class="thumb">
+							<a href="images/fulls/05_OpenBarn.jpg" class="image"><img src="images/thumbs/05_OpenBarn.jpg" alt=""></a>
+							<h2></h2>
+							<p></p>
+						</article> 
+						<article class="thumb">
 							<a href="images/fulls/Bedroom1_1.JPG" class="image"><img src="images/thumbs/Bedroom1_1.JPG" alt=""></a>
 							<h2>BEDROOM 1</h2>
 							<p>Church facing corner [Leire Lane/Ashby Road]</p>
