--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<p></p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/02_Outhouses.JPG" class="image"><img src="images/thumbs/02_Outhouses.JPG" alt=""></a>
+							<a href="images/fulls/02_Outhouses.JPG" class="image"><img src="images/thumbs/02_Outhouses_thumb.jpg" alt=""></a>
 							<h2>Outhouses Main Block</h2>
 							<p></p>
 						</article>
