--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 
 				<!-- Main -->
 					<div id="main"><article class="thumb">
+							<a href="images/fulls/PaullsFarm.jpg" class="image"><img src="images/thumbs/PaullsFarm.jpg" alt=""></a>
+							<h2></h2>
+							<p></p>
+						</article><article class="thumb">
 							<a href="images/fulls/01_Garden.jpg" class="image"><img src="images/thumbs/01_Garden.jpg" alt=""></a>
 							<h2>Garden</h2>
 							<p></p>
