--- a/index.html
+++ b/index.html
@@ -33,16 +33,18 @@
 							<a href="images/fulls/PaullsFarm.jpg" class="image"><img src="images/thumbs/PaullsFarm.jpg" alt=""></a>
 							<h2></h2>
 							<p></p>
-						</article><article class="thumb">
-							<a href="images/fulls/01_Garden.jpg" class="image"><img src="images/thumbs/01_Garden.jpg" alt=""></a>
-							<h2>Garden</h2>
-							<p></p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02_Outhouses.JPG" class="image"><img src="images/thumbs/02_Outhouses_thumb.jpg" alt=""></a>
 							<h2>Outhouses Main Block</h2>
 							<p></p>
 						</article>
+						<article class="thumb">
+							<a href="images/fulls/01_Garden.jpg" class="image"><img src="images/thumbs/01_Garden.jpg" alt=""></a>
+							<h2>Garden</h2>
+							<p></p>
+						</article>
+						
 						<article class="thumb">
 							<a href="images/fulls/03_Barn.jpg" class="image"><img src="images/thumbs/03_Barn.jpg" alt=""></a>
 							<h2>Barn</h2>
