--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@ Farmyard entrance with Utility room and Cloakroom toilet. Spacious with storage.
 									
 Standalone house with Communal Gardens & Courtyard/Farmyard 
 
-Negotiation for use of Outbuildings, Barn, Fields, Workshops, Stables possible via consulting agents and seller [seller is landlord of adjacent tenanted proerties]  </p>
+Negotiation Outbuildings, Barn, Fields, Workshops, Stables negotiation possible via consulting agents and seller [seller is landlord of adjacent tenanted proerties]  </p>
 								</section>
 
 								<p class="copyright">
-									Paull's Farm
+								Farm House
 								</p>
 							</div>
 							<div>
