--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Garage.jpg" class="image"><img src="images/thumbs/Garage.jpg" alt=""></a>
-							<h2></h2>
-							<p></p>
+							<h2>OUTHOUSES</h2>
+							<p>Garages, Double-Stable</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02_Outhouses.JPG" class="image"><img src="images/thumbs/02_Outhouses_thumb.jpg" alt=""></a>
-							<h2>Outhouses Main Block</h2>
-							<p></p>
+							<h2>OUTHOUSES</h2>
+							<p>Two sttory outhouse</p>
 						</article><article class="thumb">
 							<a href="images/fulls/03_Barn.jpg" class="image"><img src="images/thumbs/03_Barn.jpg" alt=""></a>
 							<h2>Barn</h2>
