--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<article class="thumb">
 							<a href="images/fulls/02_Outhouses.JPG" class="image"><img src="images/thumbs/02_Outhouses_thumb.jpg" alt=""></a>
 							<h2>OUTHOUSES</h2>
-							<p>Two sttory outhouse</p>
+							<p>Two story outhouse</p>
 						</article><article class="thumb">
 							<a href="images/fulls/03_Barn.jpg" class="image"><img src="images/thumbs/03_Barn.jpg" alt=""></a>
 							<h2>Barn</h2>
@@ -64,13 +64,13 @@
 						</article> 
 						<article class="thumb">
 							<a href="images/fulls/04_EndStable.JPG" class="image"><img src="images/thumbs/04_EndStable.JPG" alt=""></a>
-							<h2>End Stable at main outhouse block</h2>
-							<p></p>
+							<h2></h2>
+							<p>End Stable at main outhouse block</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/06_GarageBlockJoinTallOuthouse.JPG" class="image"><img src="images/thumbs/06_GarageBlockJoinTallOuthouse.JPG" alt=""></a>
 							<h2></h2>
-							<p></p>
+							<p>Garages join Two-story outhouse</p>
 						</article>
 
 
