--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Negotiation Outbuildings, Barn, Fields, Workshops, Stables negotiation possible 
 									<a href="mailto:superior.uk@gmail.com">superior.uk@gmail.com</a>
 									<p></p>
 									<div class="image">
-										<img src="images/PaullsFarm.jpg" alt="" style="width: 100%;">
+										<img src="images/thumbs/PaullsFarm.jpg" alt="" style="width: 100%;">
 									</div>
 								</section>
 							</div>
