--- a/index.html
+++ b/index.html
@@ -58,8 +58,14 @@
 							<a href="images/fulls/05_OpenBarn.jpg" class="image"><img src="images/thumbs/05_OpenBarn.jpg" alt=""></a>
 							<h2></h2>
 							<p></p>
-						</article> <article class="thumb">
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/FarmFieldAcrossNewBuildCarPark.JPG" class="image"><img src="images/thumbs/FarmFieldAcrossNewBuildCarPark_thumb" alt=""></a>
+							<h2></h2>
+							<p></p>
+						</article> 
+						<article class="thumb">
+							<a href="images/fulls/CompoundCarParkFromDairy.jpg" class="image"><img src="images/thumbs/CompoundCarParkFromDairy_thumb.jpg" alt=""></a>
 							<h2></h2>
 							<p></p>
 						</article> 
