--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<p></p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/FarmFieldAcrossNewBuildCarPark.JPG" class="image"><img src="images/thumbs/FarmFieldAcrossNewBuildCarPark_thumb" alt=""></a>
+							<a href="images/fulls/FarmFieldAcrossNewBuildCarPark.JPG" class="image"><img src="images/thumbs/FarmFieldAcrossNewBuildCarPark_thumb.jpg" alt=""></a>
 							<h2></h2>
 							<p></p>
 						</article> 
