Main outhouse block text

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 						<article class="thumb">
 							<a href="images/fulls/04_EndStable.JPG" class="image"><img src="images/thumbs/04_EndStable.JPG" alt=""></a>
 							<h2></h2>
-							<p>End Stable at main outhouse block</p>
+							<p>End of main outhouse block [Stable 4]</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/06_GarageBlockJoinTallOuthouse.JPG" class="image"><img src="images/thumbs/06_GarageBlockJoinTallOuthouse.JPG" alt=""></a>
-							<h2></h2>
-							<p>Garages join Two-story outhouse</p>
+							<h2>Garages</h2>
+							<p>Back entrance + Garages + Stable 1 [double] + Two-story Outhouse [Stable 2]</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Bedroom1_1.JPG" class="image"><img src="images/thumbs/Bedroom1_1.JPG" alt=""></a>
