--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<p></p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Garage.jpg" class="image"><img src="images/thumbs/Garage.jpg" alt=""></a>
+							<a href="images/fulls/Garage.jpg" class="image"><img src="images/thumbs/Garage_thumb.jpg" alt=""></a>
 							<h2>OUTHOUSES</h2>
 							<p>Garages, Double-Stable</p>
 						</article>
