--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 						<article class="thumb">
 							<a href="images/fulls/Garage.jpg" class="image"><img src="images/thumbs/Garage_thumb.jpg" alt=""></a>
 							<h2>Garages</h2>
-							<p>Back entrance + Garages + Stable 1 [double] + Two-story Outhouse [Stable 2]</p>
+							<p>Back entrance + Garages + Stable 1 [double]</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02_Outhouses.JPG" class="image"><img src="images/thumbs/02_Outhouses_thumb.jpg" alt=""></a>
 							<h2>OUTHOUSES</h2>
-							<p>Two story outhouse</p>
+							<p>Stable 2 [two story outhouse]</p>
 						</article><article class="thumb">
 							<a href="images/fulls/03_Barn.jpg" class="image"><img src="images/thumbs/03_Barn.jpg" alt=""></a>
 							<h2>Barn</h2>
