--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<article class="thumb">
 							<a href="images/fulls/02_Outhouses.JPG" class="image"><img src="images/thumbs/02_Outhouses_thumb.jpg" alt=""></a>
 							<h2>OUTHOUSES</h2>
-							<p>Stable 2 [two-story]</p>
+							<p>Stable 2 [two-story] + Stable 3</p>
 						</article><article class="thumb">
 							<a href="images/fulls/03_Barn.jpg" class="image"><img src="images/thumbs/03_Barn.jpg" alt=""></a>
 							<h2>Barn</h2>
