--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Garage.jpg" class="image"><img src="images/thumbs/Garage_thumb.jpg" alt=""></a>
-							<h2>Garages</h2>
-							<p>Back-entrance House + Garages + Stable 1 [double stable]</p>
+							<h2>Garages/Workshops + Double Stable</h2>
+							<p>Back-entrance House + Garages/Workshops + Stable 1 [double stable]</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02_Outhouses.JPG" class="image"><img src="images/thumbs/02_Outhouses_thumb.jpg" alt=""></a>
