--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Garage.jpg" class="image"><img src="images/thumbs/Garage_thumb.jpg" alt=""></a>
-							<h2>Outhouses - Garages/Workshops + Double Stable</h2>
-							<p>Back-entrance House + Garages/Workshops + Stable 1 [double stable]</p>
+							<h2>Outhouses - Garage/Workshops + Double Stable</h2>
+							<p>Back-entrance House + Garage/Workshops + Stable 1 [double stable]</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02_Outhouses.JPG" class="image"><img src="images/thumbs/02_Outhouses_thumb.jpg" alt=""></a>
@@ -57,7 +57,7 @@
 						<article class="thumb">
 							<a href="images/fulls/05_OpenBarn.jpg" class="image"><img src="images/thumbs/05_OpenBarn.jpg" alt=""></a>
 							<h2></h2>
-							<p></p>
+							<p>Open BARN</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/FarmFieldAcrossNewBuildCarPark.JPG" class="image"><img src="images/thumbs/FarmFieldAcrossNewBuildCarPark_thumb.jpg" alt=""></a>
