--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<article class="thumb">
 							<a href="images/fulls/CompoundCarParkFromDairy.jpg" class="image"><img src="images/thumbs/CompoundCarParkFromDairy_thumb.jpg" alt=""></a>
 							<h2>Compound Car-Park + current farm entrance </h2>
-							<p>New-build tenant parking + current main FARM ENTRANCE [shared via Leire Lane driveway]  *Re-establish Ashby Road entrance (possibly further down-field/safer traffic spot)  </p>
+							<p>New-build tenant parking + current main FARM ACCESS [shared via Leire Lane compoun car-park]  *Re-establish Ashby Road entrance (possibly further down-field/safer traffic spot)  </p>
 						</article> 
 						<article class="thumb">
 							<a href="images/fulls/04_EndStable.JPG" class="image"><img src="images/thumbs/04_EndStable.JPG" alt=""></a>
