--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/FarmFieldAcrossNewBuildCarPark.JPG" class="image"><img src="images/thumbs/FarmFieldAcrossNewBuildCarPark_thumb.jpg" alt=""></a>
-							<h2></h2>
-							<p></p>
+							<h2>Compound Car-Park</h2>
+							<p>*New-build tenant use only </p>
 						</article> 
 						<article class="thumb">
 							<a href="images/fulls/CompoundCarParkFromDairy.jpg" class="image"><img src="images/thumbs/CompoundCarParkFromDairy_thumb.jpg" alt=""></a>
