--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 							<a href="images/fulls/02_Outhouses.JPG" class="image"><img src="images/thumbs/02_Outhouses_thumb.jpg" alt=""></a>
 							<h2>OUTHOUSES - Stable 2 + Stable 3</h2>
 							<p>Stable 2 [two-story] + Stable 3</p>
-						</article><article class="thumb">
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/03_Barn.jpg" class="image"><img src="images/thumbs/03_Barn.jpg" alt=""></a>
 							<h2>Barn</h2>
 							<p></p>
 						</article>
-						
 						<article class="thumb">
 							<a href="images/fulls/05_OpenBarn.jpg" class="image"><img src="images/thumbs/05_OpenBarn.jpg" alt=""></a>
 							<h2></h2>
