--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
 							<h2>Compound Car-Park</h2>
 							<p>*New-build tenant use only </p>
 						</article> 
-						<article class="thumb">
-							<a href="images/fulls/CompoundCarParkFromDairy.jpg" class="image"><img src="images/thumbs/CompoundCarParkFromDairy_thumb.jpg" alt=""></a>
-							<h2>FARM ACCESS via Compound Car-Park</h2>
-							<p> Current main farm access gate at Leire Lane, shared driveway with new-build houses via compound car-park]  *Re-establish Ashby Road entrance (possibly further down-field/safer traffic spot)  </p>
+							<h2>FARM ACCESS through Compound Car-Park</h2>
+							<p> Current main access shared with new-build tenants via driveway from Leire Lane</p>
 						</article> 
 						<article class="thumb">
 							<a href="images/fulls/04_EndStable.JPG" class="image"><img src="images/thumbs/04_EndStable.JPG" alt=""></a>
