--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 							<p>*New-build tenant use only </p>
 						</article> 
 							<article class="thumb">
-							<a href="images/fulls/CompoundCarParkFromDairy.jpg" class="image"><img src="images/thumbs/CompoundCarParkFromDairy_thumb.jpg" alt=""></a>
-							<h2>FARM ACCESS through Compound Car-Park</h2>
-							<p> Current main access shared with new-build tenants via driveway from Leire Lane</p>
-						</article>
+								<a href="images/fulls/CompoundCarParkFromDairy.jpg" class="image"><img src="images/thumbs/CompoundCarParkFromDairy_thumb.jpg" alt=""></a>
+								<h2>FARM ACCESS through Compound Car-Park</h2>
+								<p> Current main access shared with new-build tenants car-park. Entrance via driveway from Leire Lane</p>
+						</article> 
 						<article class="thumb">
 							<a href="images/fulls/04_EndStable.JPG" class="image"><img src="images/thumbs/04_EndStable.JPG" alt=""></a>
 							<h2></h2>
