--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/FarmFieldAcrossNewBuildCarPark.JPG" class="image"><img src="images/thumbs/FarmFieldAcrossNewBuildCarPark_thumb.jpg" alt=""></a>
-							<h2>FARM ACCESS through Compound Car-Park</h2>
-							<p>*New-build tenant use only </p>
+							<h2>FARM ACCESS via new-build tenants car-park</h2>
+							<p>*Communal parking for 1,3,5,5a Leire Lane only </p>
 						</article> 
 							<article class="thumb">
 								<a href="images/fulls/CompoundCarParkFromDairy.jpg" class="image"><img src="images/thumbs/CompoundCarParkFromDairy_thumb.jpg" alt=""></a>
 								<h2>Compound Car-Park</h2>
-								<p> Current main access shared with new-build tenants car-park. Entrance via driveway from Leire Lane</p>
+								<p> Farm accessed currently via shared compound driveway, entrance on Leire Lane </p>
 						</article> 
 						<article class="thumb">
 							<a href="images/fulls/04_EndStable.JPG" class="image"><img src="images/thumbs/04_EndStable.JPG" alt=""></a>
