--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/NewBuildCarPark.JPG" class="image"><img src="images/thumbs/NewBuildCarPark_thumb.jpg" alt=""></a>
-							<h2>FARM ACCESS via new-build tenants car-park</h2>
+							<h2>FARM ACCESS via new-build car-park</h2>
 							<p>*Communal parking for 1,3,5,5a Leire Lane only </p>
 						</article> 
 							<article class="thumb">
