--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<article class="thumb">
 								<a href="images/fulls/CompoundCarParkFromDairy.jpg" class="image"><img src="images/thumbs/CompoundCarParkFromDairy_thumb.jpg" alt=""></a>
 								<h2>Compound Car-Park</h2>
-								<p> Farm accessed currently via shared compound driveway, entrance on Leire Lane </p>
+								<p>Current farm access is through shared driveway. Entrance on Leire Lane</p>
 						</article> 
 						<article class="thumb">
 							<a href="images/fulls/04_EndStable.JPG" class="image"><img src="images/thumbs/04_EndStable.JPG" alt=""></a>
