--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@ Negotiation Outbuildings, Barn, Fields, Workshops, Stables negotiation possible 
 									<div class="image">
 										<img src="images/thumbs/PaullsFarm.jpg" alt="" style="width: 100%;">
 									</div>
+									<div class="image">
+										<img src="images/thumbs/SnowyField_portrait.jpg" alt="" style="width: 100%;">
+									</div>
 								</section>
 							</div>
 						</div>
