--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@ Negotiation Outbuildings, Barn, Fields, Workshops, Stables negotiation possible 
 									<div class="image">
 										<img src="images/thumbs/SnowyField_portrait.jpg" alt="" style="width: 100%;">
 									</div>
-								</section>
+								</section><div class="image">
+										<img src="images/thumbs/SnowyField_portrait.jpg" alt="" style="width: 100%;">
+									</div>
 							</div>
 						</div>
 					</footer>
