--- a/index.html
+++ b/index.html
@@ -195,14 +195,12 @@ Negotiation Outbuildings, Barn, Fields, Workshops, Stables negotiation possible 
 									<h2>Contact</h2>
 									<a href="mailto:superior.uk@gmail.com">superior.uk@gmail.com</a>
 									<p></p>
-									<div class="image">
-										<img src="images/thumbs/PaullsFarm.jpg" alt="" style="width: 100%;">
-									</div>
+									
 									<div class="image">
 										<img src="images/thumbs/SnowyField_portrait.jpg" alt="" style="width: 100%;">
 									</div>
 								</section><div class="image">
-										<img src="images/thumbs/SnowyField_portrait.jpg" alt="" style="width: 100%;">
+										<img src="images/thumbs/" alt="" style="width: 100%;">
 									</div>
 							</div>
 						</div>
