--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
 							<div>
 								<section>
 									<h2>Paull's Farmhouse (formally Home Farm) Ashby Parva LE17 5HR</h2>
-									<p>Unmodernised Grade 2 listed farmhouse 
-10 rooms (5 up 5 down) 
+									<p>Unmodernised Grade 2 listed farmhouse</p>
+<p>10 rooms (5 up 5 down)</p>
 HUGE kitchen
 2 staircases
 Only 2.5 terrible bathrooms at the moment but space for more
