--- a/index.html
+++ b/index.html
@@ -174,15 +174,17 @@
 							<div>
 								<section>
 									<h2>Paull's Farmhouse (formally Home Farm) Ashby Parva LE17 5HR</h2>
-									<p>Unmodernised Grade 2 listed farmhouse<br/> 10 rooms (5 up 5 down)<br />
-HUGE kitchen
-2 staircases
-Only 2.5 terrible bathrooms at the moment but space for more
-Farmyard entrance with Utility room and Cloakroom toilet. Spacious with storage. 
-									
-Standalone house with Communal Gardens & Courtyard/Farmyard 
-
-Negotiation Outbuildings, Barn, Fields, Workshops, Stables negotiation possible via consulting agents and seller [seller is landlord of adjacent tenanted proerties]  </p>
+									<p>Unmodernised Grade 2 listed farmhouse<br />
+10 rooms (5 up 5 down)<br />
+HUGE kitchen<br />
+2 staircases<br />
+2.5 terrible bathrooms with space for more<br />
+Porch entrance at rear; Mud Room + Laundry Room+ Cloakroom toilet + Built in coat-cupboard<br />
+Standalone house with 3 attached outhouses [Garage +Workshop + Double-Stable]<br />
+Communal Garden<br />
+Communal Courtyard/Farmyard<br />
+Negotiable use of barn, additional outhouses and fields via consulting agents and seller [seller is landlord of adjacent tenanted properties]<br />
+Co-Operative ownership considered</p>
 								</section>
 
 								<p class="copyright">
