--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 							<p>Back-entrance House + Garage/Workshops + Stable 1 [double stable]</p>
 						</article>
 						<article class="thumb">
+							<a href="images/fulls/ConcretedYard.jpg" class="image"><img src="images/thumbs/ConcretedYard.jpg" alt=""></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/02_Outhouses.JPG" class="image"><img src="images/thumbs/02_Outhouses_thumb.jpg" alt=""></a>
 							<h2>OUTHOUSES - Stable 2 + Stable 3</h2>
 							<p>Stable 2 [two-story] + Stable 3</p>
