--- a/index.html
+++ b/index.html
@@ -59,16 +59,7 @@
 								<h2>Compound Car-Park</h2>
 								<p>Current farm access is through shared driveway. Entrance on Leire Lane</p>
 						</article> 
-						<article class="thumb">
-							<a href="images/fulls/04_EndStable.JPG" class="image"><img src="images/thumbs/04_EndStable.JPG" alt=""></a>
-							<h2></h2>
-							<p>End of main outhouse block [Stable 4]</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/06_GarageBlockJoinTallOuthouse.JPG" class="image"><img src="images/thumbs/06_GarageBlockJoinTallOuthouse.JPG" alt=""></a>
-							<h2></h2>
-							<p></p>
-						</article>
+						
 						<article class="thumb">
 							<a href="images/fulls/Bedroom1_1.JPG" class="image"><img src="images/thumbs/Bedroom1_1.JPG" alt=""></a>
 							<h2>BEDROOM 1</h2>
@@ -168,7 +159,16 @@
 						<article class="thumb">
 							<a href="images/fulls/05_OpenBarn.jpg" class="image"><img src="images/thumbs/05_OpenBarn.jpg" alt=""></a>
 							<h2></h2>
-							<p>Open BARN</p>
+							<p>Open BARN</p><article class="thumb">
+							<a href="images/fulls/04_EndStable.JPG" class="image"><img src="images/thumbs/04_EndStable.JPG" alt=""></a>
+							<h2></h2>
+							<p>End of main outhouse block [Stable 4]</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/06_GarageBlockJoinTallOuthouse.JPG" class="image"><img src="images/thumbs/06_GarageBlockJoinTallOuthouse.JPG" alt=""></a>
+							<h2></h2>
+							<p></p>
+						</article>
 						</article>
 					</div>
 
