--- a/index.html
+++ b/index.html
@@ -157,10 +157,13 @@
 							<a href="images/fulls/05_OpenBarn.jpg" class="image"><img src="images/thumbs/05_OpenBarn.jpg" alt=""></a>
 							<h2></h2>
 							<p>Open BARN</p><article class="thumb">
+							
+						</article>
+							<article class="thumb">
 							<a href="images/fulls/04_EndStable.JPG" class="image"><img src="images/thumbs/04_EndStable.JPG" alt=""></a>
 							<h2></h2>
 							<p>End of main outhouse block [Stable 4]</p>
-						</article>
+								</article>
 						<article class="thumb">
 							<a href="images/fulls/06_GarageBlockJoinTallOuthouse.JPG" class="image"><img src="images/thumbs/06_GarageBlockJoinTallOuthouse.JPG" alt=""></a>
 							<h2></h2>
