--- a/index.html
+++ b/index.html
@@ -174,6 +174,11 @@
 							<h2>OUTHOUSES - Stable 2 + Stable 3</h2>
 							<p>Stable 2 [two-story] + Stable 3</p>
 						</article>
+							<article class="thumb">
+							<a href="images/fulls/MainBlock.jpg" class="image"><img src="images/thumbs/MainBlock.jpg" alt=""></a>
+							<h2></h2>
+							<p></p>
+						</article>
 					</div>
 
 				<!-- Footer -->
