--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
 						<article class="thumb">
 							<a href="images/fulls/05_OpenBarn.jpg" class="image"><img src="images/thumbs/05_OpenBarn.jpg" alt=""></a>
 							<h2></h2>
-							<p>Open BARN</p><article class="thumb">
-							
+							<p>Open BARN</p>
 						</article>
 							<article class="thumb">
 							<a href="images/fulls/04_EndStable.JPG" class="image"><img src="images/thumbs/04_EndStable.JPG" alt=""></a>
