--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02_Outhouses.JPG" class="image"><img src="images/thumbs/02_Outhouses_thumb.jpg" alt=""></a>
-							<h2>OUTHOUSES - Stable 2 + Stable 3</h2>
-							<p>Stable 2 [two-story] + Stable 3</p>
+							<h2></h2>
+							<p>Two-story outhouse</p>
 						</article>
 							<article class="thumb">
 							<a href="images/fulls/MainBlock.jpg" class="image"><img src="images/thumbs/MainBlock.jpg" alt=""></a>
