--- a/index.html
+++ b/index.html
@@ -192,9 +192,8 @@ HUGE kitchen<br />
 Porch entrance at rear; Mud Room + Laundry Room+ Cloakroom toilet + Built in coat-cupboard<br />
 										<br />
 Standalone house with 3 attached outhouses [Garage +Workshop + Double-Stable]<br />
-Communal Garden<br />
-Communal Courtyard/Farmyard<br />
-Negotiable use of barn, additional outhouses and fields via consulting agents and seller [seller is landlord of adjacent tenanted properties]<br />
+Communal Garden, Courtyard & Farmyard<br />
+Additional outhouses and field use all negotiable via consulting agents and seller [seller is landlord of adjacent tenanted properties]<br />
 Co-Operative ownership considered</p>
 								</section>
 
