--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ Porch entrance at rear; Mud Room + Laundry Room+ Cloakroom toilet + Built in coa
 										<br />
 Standalone house with 3 attached outhouses [Garage +Workshop + Double-Stable]<br />
 Communal Garden, Courtyard & Farmyard<br />
-Additional outhouse and/or field use, all negotiable via consulting agents & seller [seller is landlord of adjacent tenanted properties]<br />
+Additional outhouse and/or field use, all negotiable via consulting agents & seller [seller is landlord of adjacent tenanted properties]<br /><br />
 Co-Operative ownership considered</p>
 								</section>
 
