Fix PNG, optimise

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<p>Village corner outlook from main window + Small corner window at THE OLD DAIRY party-wall </p> 
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/BoxRoom.png" class="image"><img src="images/thumbs/BoxRoom.png" alt=""></a>
+							<a href="images/fulls/BoxRoom.jpg" class="image"><img src="images/thumbs/BoxRoom.png" alt=""></a>
 							<h2>BEDROOM 5 </h2>
 							<p> Box Room/Office/Jack & Jill bathroom (between BEDROOMs 1 and 4) </p>
 						</article>
