--- a/index.html
+++ b/index.html
@@ -183,19 +183,84 @@
 						<div class="inner split">
 							<div>
 								<section>
-									<h2>Paull's Farmhouse (formally Home Farm) Ashby Parva LE17 5HR</h2>
-									<p>Unmodernised Grade 2 listed farmhouse<br />
-10 rooms (5 up 5 down)<br />
-HUGE kitchen<br />
-2 staircases<br />
-2.5 terrible bathrooms with space for more<br />
-Porch entrance at rear; Mud Room + Laundry Room+ Cloakroom toilet + Built in coat-cupboard<br />
-										<br />
-Standalone house with 3 attached outhouses [Garage +Workshop + Double-Stable]<br />
-Communal Garden, Courtyard & Farmyard<br />
-Additional outhouse and/or field use, all negotiable via consulting agents & seller [seller is landlord of adjacent tenanted properties]<br /><br />
-Co-Operative ownership considered</p>
-								</section>
+									<h2>Farmhouse with outbuildings, shared courtyard and green space</h2>
+									<br/><br/>
+<h4>Ideal opportunity for Housing Co-operative purchase ahead of release on the open market<h4/>
+<br/>
+<p>
+Grade 2 listed Farmhouse with five (potentially six) bedrooms, workshops and stables, on the edge of the village of Ashby Parva in rural Leicestershire.
+</p>
+
+<h4>Setting</h4>
+	
+<p>The Farmhouse sits at the church-facing corner of Ashby Parva. To the front, the large windows offer a clear vantage along the well-preserved village street and across to St Peter’s Church. 
+Side rooms have field-views over grazing pastures. The rear and yard windows overlook the farmyard, paddocks and wider fields. 
+The house backs onto the farmyard area which has the potential to become a beautiful, residential courtyard, shared with the neighbouring Dairy.
+</p>
+<br/>
+<h4>Context</h4> 
+<p>The seller is the owner of The Dairy and adjacent tenanted properties. Ideally the Farmhouse will be sold to a housing co-op who would have shared use of the courtyard and other common spaces.
+</p>
+<br/>
+<h4>Outbuildings and land</h4>
+
+<p>Attached to the Farmhouse are two original brick workshops/outbuildings and a double-stalled stable
+There is then a two-storey historic grain-store and a further two stables
+Potential for outbuilding development/conversion, subject to planning permission and listed building consent 
+</p>
+<p>(The detached stable block that completes the courtyard is associated with The Dairy, not the Farmhouse)
+</p>
+<br/>
+<h4>Common spaces shared with the neighbouring Dairy
+</h4>
+<ul>
+	<li>Courtyard
+	</li>
+<li>Beyond the courtyard is a car park and a green garden space which could be developed as an orchard
+</li>
+	<li>Shared use of an open-fronted barn
+</li>
+
+<li>Open to negotiation
+</li>
+<li>Use of an adjacent field for food growing or pasture 
+</li>
+</ul>
+	<br/>
+<h4>Indoor Spaces</h4>
+<ul><li>Downstairs bedrooms: Two large rooms with potential as bedrooms
+</li><li>Living room: Large reception suitable as community living room & meeting space
+</li><li>Kitchen: Large fitted kitchen suited to community meals & dining
+
+
+</li><li>Pantry: Long walk-in pantry with potential for bathroom conversion
+</li><li>Utility room: Laundry room with potential for additional shower
+</li><li>Cloakroom WC: Toilet and washbasin
+
+
+</li><li>Porch and entrances: Three external doors, one with large porch/boot-hall, built-in coat cupboard
+</li><li>Two staircases: Two sets of stairs provide flexibility regarding allocation of spaces
+
+
+</li><li>Three large upstairs bedrooms
+</li><li>Ensuite bedroom: Large upstairs room with adjoining shower-room/WC
+</li><li>Bathroom: Bathtub, over-bath shower, basin and toilet
+</li><li>Office: One small upstairs room, potentially office or child’s room
+</li></ul>
+	<br/>
+<h4>Location</h4>
+<p>Ashby Parva, near Lutterworth, is fortunate in being a rare rural enclave with much of its historic character retained. Conservation is core to the ownership of the village farms, whose stewardship works to preserve the integrity of local farm culture.
+</p>
+	<ul>
+<li>Village hall is a thriving community centre hosting regular gatherings and events.
+</li><li>Country pub with restaurant and garden space/playground
+</li><li>Family farm shop open for weekend provisions
+</li><li>Nearest town, Lutterworth, a small market town three miles away, with shops/supermarkets, a leisure centre, library, primary schools and high schools
+</li><li>M1 motorway Lutterworth junction 20, three mile from Ashby Parva
+</li><li>Hourly buses to Rugby and Leicester, both with nationally networked railway stations
+</li><li>Frequent trains to London from Rugby take as little as 53 minutes with competitive ticket prices keeping Rugby railway system a Midlands hidden secret 
+	
+</li>	</ul>				</section>
 
 								<p class="copyright">
 								Farm House
@@ -204,7 +269,7 @@ Co-Operative ownership considered</p>
 							<div>
 								<section>
 									<h2>Contact</h2>
-									<a href="mailto:superior.uk@gmail.com">superior.uk@gmail.com</a>
+									<a href="mailto:superior.uk@gmail.com">email us!</a>
 									<p></p>
 									
 									<div class="image">
