--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
 							<div>
 								<section>
 									<h2>Farmhouse with outbuildings, shared courtyard and green space</h2>
-									<br/><br/>
+									<br/>
 <h4>Ideal opportunity for Housing Co-operative purchase ahead of release on the open market<h4/>
 <br/>
 <p>
-Grade 2 listed Farmhouse with five (potentially six) bedrooms, workshops and stables, on the edge of the village of Ashby Parva in rural Leicestershire.
+Grade 2 listed Farmhouse with 5 (potentially 6) bedrooms, workshops and stables, on the edge of the village of Ashby Parva in rural Leicestershire.
 </p>
 
 <h4>Setting</h4>
@@ -220,12 +220,13 @@ Potential for outbuilding development/conversion, subject to planning permission
 </li>
 	<li>Shared use of an open-fronted barn
 </li>
+<br>
+	
+<h4>Open to negotiation</h4>
 
-<li>Open to negotiation
-</li>
-<li>Use of an adjacent field for food growing or pasture 
-</li>
-</ul>
+<p>Use of an adjacent field for food growing or pasture 
+</p>
+
 	<br/>
 <h4>Indoor Spaces</h4>
 <ul><li>Downstairs bedrooms: Two large rooms with potential as bedrooms
