--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 <p>
 Grade 2 listed Farmhouse with 5 (potentially 6) bedrooms, workshops and stables, on the edge of the village of Ashby Parva in rural Leicestershire.
 </p>
-
+<br/>
 <h4>Setting</h4>
 	
 <p>The Farmhouse sits at the church-facing corner of Ashby Parva. To the front, the large windows offer a clear vantage along the well-preserved village street and across to St Peter’s Church. 
@@ -204,10 +204,12 @@ The house backs onto the farmyard area which has the potential to become a beaut
 <br/>
 <h4>Outbuildings and land</h4>
 
-<p>Attached to the Farmhouse are two original brick workshops/outbuildings and a double-stalled stable
-There is then a two-storey historic grain-store and a further two stables
-Potential for outbuilding development/conversion, subject to planning permission and listed building consent 
-</p>
+<ul><li>Attached to the Farmhouse are two original brick workshops/outbuildings and a double-stalled stable
+</li>
+	<li>There is then a two-storey historic grain-store and a further two stables
+</li>
+	<li>Potential for outbuilding development/conversion, subject to planning permission and listed building consent 
+	</li>
 <p>(The detached stable block that completes the courtyard is associated with The Dairy, not the Farmhouse)
 </p>
 <br/>
