--- a/index.html
+++ b/index.html
@@ -209,14 +209,14 @@ The house backs onto the farmyard area which has the potential to become a beaut
 	<li>There is then a two-storey historic grain-store and a further two stables
 </li>
 	<li>Potential for outbuilding development/conversion, subject to planning permission and listed building consent 
-	</li>
+	</li></ul>
 <p>(The detached stable block that completes the courtyard is associated with The Dairy, not the Farmhouse)
 </p>
 <br/>
 <h4>Common spaces shared with the neighbouring Dairy
 </h4>
 <ul>
-	<li>Courtyard
+	<li>Courtyard, as described above
 	</li>
 <li>Beyond the courtyard is a car park and a green garden space which could be developed as an orchard
 </li>
@@ -235,15 +235,16 @@ The house backs onto the farmyard area which has the potential to become a beaut
 </li><li>Living room: Large reception suitable as community living room & meeting space
 </li><li>Kitchen: Large fitted kitchen suited to community meals & dining
 
-
+<br/>
 </li><li>Pantry: Long walk-in pantry with potential for bathroom conversion
 </li><li>Utility room: Laundry room with potential for additional shower
 </li><li>Cloakroom WC: Toilet and washbasin
-
+<br/>
 
 </li><li>Porch and entrances: Three external doors, one with large porch/boot-hall, built-in coat cupboard
 </li><li>Two staircases: Two sets of stairs provide flexibility regarding allocation of spaces
-
+<br/>
+	
 
 </li><li>Three large upstairs bedrooms
 </li><li>Ensuite bedroom: Large upstairs room with adjoining shower-room/WC
