--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 <h4>Ideal opportunity for Housing Co-operative purchase ahead of release on the open market<h4/>
 <br/>
 <p>
-Grade 2 listed Farmhouse with 5 (potentially 6) bedrooms, workshops and stables, on the edge of the village of Ashby Parva in rural Leicestershire.
+Grade 2 listed Farmhouse with five (potentially six) bedrooms, workshops and stables, on the edge of the village of Ashby Parva in rural Leicestershire.
 </p>
 <br/>
 <h4>Setting</h4>
