--- a/index.html
+++ b/index.html
@@ -183,13 +183,15 @@
 						<div class="inner split">
 							<div>
 								<section>
-									<h2>Farmhouse with outbuildings, shared courtyard and green space</h2>
+									<h2>Farmhouse with outbuildings, shared courtyard and paddock</h2>
 									<br/>
 <h4>Ideal opportunity for Housing Co-operative purchase ahead of release on the open market<h4/>
 <br/>
 <p>
-Grade 2 listed Farmhouse with five (potentially six) bedrooms, workshops and stables, on the edge of the village of Ashby Parva in rural Leicestershire.
+Grade 2 listed, unmodernised farmhouse with five (potentially six) bedrooms, workshops and stables, on the edge of the village of Ashby Parva in rural Leicestershire. Some work needed.
 </p>
+	<br/>
+	<h4>Asking price for leasehold sale: £650K</h4>
 <br/>
 <h4>Setting</h4>
 	
@@ -209,7 +211,12 @@ The house backs onto the farmyard area which has the potential to become a beaut
 	<li>There is then a two-storey historic grain-store and a further two stables
 </li>
 	<li>Potential for outbuilding development/conversion, subject to planning permission and listed building consent 
-	</li></ul>
+	</li>
+<li>Beyond the courtyard is a car park and a green garden space which could be developed as an orchard
+</li>
+	<li>Large open-fronted barn
+</li>
+</ul>
 <p>(The detached stable block that completes the courtyard is associated with The Dairy, not the Farmhouse)
 </p>
 <br/>
@@ -218,16 +225,10 @@ The house backs onto the farmyard area which has the potential to become a beaut
 <ul>
 	<li>Courtyard, as described above
 	</li>
-<li>Beyond the courtyard is a car park and a green garden space which could be developed as an orchard
-</li>
-	<li>Shared use of an open-fronted barn
-</li></ul>
-<br>
+	<li>Paddock/field for food growing or pasture </li>
 	
-<h4>Open to negotiation</h4>
+</ul>
 
-<p>Use of an adjacent field for food growing or pasture 
-</p>
 
 	<br/>
 <h4>Indoor Spaces</h4>
