--- a/index.html
+++ b/index.html
@@ -212,10 +212,9 @@ The house backs onto the farmyard area which has the potential to become a beaut
 </li>
 	<li>Potential for outbuilding development/conversion, subject to planning permission and listed building consent 
 	</li>
-<li>Beyond the courtyard is a car park and a green garden space which could be developed as an orchard
-</li>
-	<li>Large open-fronted barn
-</li>
+	<li>Open-fronted barn beyond the courtyard</li>
+<li>Car park and a green garden space which could be developed as an orchard
+
 </ul>
 <p>(The detached stable block that completes the courtyard is associated with The Dairy, not the Farmhouse)
 </p>
