--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@ Grade 2 listed, unmodernised farmhouse with five (potentially six) bedrooms, wor
 	
 <p>The Farmhouse sits at the church-facing corner of Ashby Parva. To the front, the large windows offer a clear vantage along the well-preserved village street and across to St Peter’s Church. 
 Side rooms have field-views over grazing pastures. The rear and yard windows overlook the farmyard, paddocks and wider fields. 
-The house backs onto the farmyard area which has the potential to become a beautiful, residential courtyard, shared with the neighbouring Dairy.
+The house backs onto the farmyard area which has the potential to become a beautiful, residential courtyard, shared with the neighbouring Old Dairy.
 </p>
 <br/>
 <h4>Context</h4> 
-<p>The seller is the owner of The Dairy and adjacent tenanted properties. Ideally the Farmhouse will be sold to a housing co-op who would have shared use of the courtyard and other common spaces.
+<p>The seller is the owner of the Old Dairy and adjacent tenanted properties. Ideally the Farmhouse will be sold to a housing co-op who would have shared use of the courtyard and other common spaces.
 </p>
 <br/>
 <h4>Outbuildings and land</h4>
