--- a/index.html
+++ b/index.html
@@ -264,7 +264,25 @@ The house backs onto the farmyard area which has the potential to become a beaut
 </li><li>Hourly buses to Rugby and Leicester, both with nationally networked railway stations
 </li><li>Frequent trains to London from Rugby take as little as 53 minutes with competitive ticket prices keeping Rugby railway system a Midlands hidden secret 
 	
-</li>	</ul>				</section>
+</li>	</ul>			
+
+<p>
+	<h4>
+		Energy Performance Certificate (EPC)
+	</h4>
+	<ul>
+		<li>
+	Current: High E
+		</li><li>
+	Potential: High C
+	</li>
+	<li>
+		<a href="https://find-energy-certificate.service.gov.uk/energy-certificate/0250-2893-7084-9608-6755">Link to EPC</a>
+	</li>
+	</ul>
+	
+</p>
+</section>
 
 								<p class="copyright">
 								Farm House
