--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 Grade 2 listed, unmodernised farmhouse with five (potentially six) bedrooms, workshops and stables, on the edge of the village of Ashby Parva in rural Leicestershire. Some work needed.
 </p>
 
-	<h4>Asking price for freehold sale: £650K</h4>
+	<h4>Offers in the region of £600K Freehold sale  </h4>
 <br/><br>
 <h4>Setting</h4>
 	
